COP-3716 add missing endpoints to the agentic changelog

--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -28,21 +28,40 @@ We added a new API for managing and communicating with AI agents.
 
 | Endpoint                                                                                                                                                                                             | Description                                     |
 |------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------|
-| [Agent's Chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat)                                   | It allows to chat with AI agents                |
-| [Agent's Async Chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat-async)                       | It allows to chat with AI agents asynchronously |
-| [Get available agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-templates)                | It retrieves all agent templates                |
-| [Search agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-templates)                    | It searches for aget templates                  |
-| [Create agent instance based on the template](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-clone-template) | It creates a new agent based on the template    |
-| [Get agents](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-agents)                                      | It retrieves all agents                         |
-| [Search agents](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-agents)                                | It searches for agents                          |
-| [Get agent by Id](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-retrieve-agent)                              | It retrieves an agent                           |
-| [Upsert agents](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#put-ai-upsert-agent)                                  | It upserts an agent                             |
-| [Partially update agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#patch-ai-update-agent)                       | It partially updates an agent                   |
-| [Delete agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#delete-ai-delete-agent)                                | It deletes an agent                             |
-| [Get available jobs](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#get-ai-list-jobs)                                    | It retrieves all agent jobs                     |
-| [Get available job](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#get-ai-job)                                           | It retrieves an agent job                       |
-| [Delete job](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#delete-ai-job)                                               | It deletes an agent job                         |
-| [Search Jobs](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#post-ai-search-jobs)                                        | It searches for agent jobs                      |
+| [Starting agent chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat)                            | It allows to chat with AI agents                |
+| [Starting agent async chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat-async)                | It allows to chat with AI agents asynchronously |
+| [Listing available agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-templates)            | It retrieves all agent templates                |
+| [Searching agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-templates)                 | It searches for aget templates                  |
+| [Creating agent instance based on a template](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-clone-template) | It creates a new agent based on the template    |
+| [Listing agents](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-agents)                                  | It retrieves all agents                         |
+| [Searching agents](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-agents)                             | It searches for agents                          |
+| [Retrieving agent by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-retrieve-agent)                       | It retrieves an agent                           |
+| [Upserting agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#put-ai-upsert-agent)                                | It upserts an agent                             |
+| [Partially updating agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#patch-ai-update-agent)                     | It partially updates an agent                   |
+| [Deleting agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#delete-ai-delete-agent)                              | It deletes an agent                             |
+| [Listing available jobs](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#get-ai-list-jobs)                                | It retrieves all agent jobs                     |
+| [Searching jobs](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#post-ai-search-jobs)                                     | It searches for agent jobs                      |
+| [Retrieving available job](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#get-ai-retrieve-job)                           | It retrieves an agent job                       |
+| [Deleting a job](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#delete-ai-delete-job)                                    | It deletes an agent job                         |
+| [Listing commerce events](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/commerce-events#GET-ai-list-commerce-events)        | It deletes an agent job                         |
+| [Listing MCP servers](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-list-mcp-servers)                     | It retrieves all MCP servers                    |
+| [Searching MCP servers](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#post-ai-search-mcp-servers)                | It searches for MCP servers                     |
+| [Retrieving MCP server by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-retrieve-mcp-server)          | It retrieves a MCP server                       |
+| [Upserting MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#put-ai-upsert-mcp-server)                   | It upserts a MCP server                         |
+| [Partially updating MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#patch-ai-update-mcp-server)        | It partially updates a MCP server               |
+| [Deleting MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#delete-ai-delete-mcp-server)                 | It deletes a MCP server                         |
+| [Listing tokens](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#get-ai-list-tokens)                                    | It retrieves all tokens                         |
+| [Searching tokens](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#post-ai-search-tokens)                               | It searches for tokens                          |
+| [Retrieving token by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#get-ai-retrieve-token)                         | It retrieves a token                            |
+| [Upserting token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#put-ai-upsert-token)                                  | It upserts a token                              |
+| [Partially updating token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#patch-ai-update-token)                       | It partially updates a token                    |
+| [Deleting token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#delete-ai-delete-token)                                | It deletes a token                              |
+| [Listing tools](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-list-tools)                                       | It retrieves all tools                          |
+| [Searching tools](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#post-ai-search-tools)                                  | It searches for tools                           |
+| [Retrieving tool by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-retrieve-tool)                            | It retrieves a tool                             |
+| [Upserting tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#put-ai-upsert-tool)                                     | It upserts a tool                               |
+| [Partially updating tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#patch-ai-update-tool)                          | It partially updates a tool                     |
+| [Deleting tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#delete-ai-delete-tool)                                   | It deletes a tool                               |
 
 ## Known problems
 
