--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -28,7 +28,7 @@ We added a new API for managing and communicating with AI agents.
 
 | Endpoint                                                                                                                                                                                             | Description                                     |
 |------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------|
-| [Starting agent chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat)                            | It allows to chat with AI agents                |
+| [Starting agent chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat)                            | It allows chatting with AI agents.                |
 | [Starting agent async chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat-async)                | It allows to chat with AI agents asynchronously |
 | [Listing available agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-templates)            | It retrieves all agent templates                |
 | [Searching agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-templates)                 | It searches for aget templates                  |
