--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -29,7 +29,7 @@ We added a new API for managing and communicating with AI agents.
 | Endpoint                                                                                                                                                                                             | Description                                     |
 |------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------|
 | [Starting agent chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat)                            | It allows chatting with AI agents.                |
-| [Starting agent async chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat-async)                | It allows to chat with AI agents asynchronously |
+| [Starting agent async chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat-async)                | It allows chatting with AI agents asynchronously. |
 | [Listing available agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-templates)            | It retrieves all agent templates                |
 | [Searching agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-templates)                 | It searches for aget templates                  |
 | [Creating agent instance based on a template](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-clone-template) | It creates a new agent based on the template    |
