--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -32,7 +32,7 @@ We added a new API for managing and communicating with AI agents.
 | [Starting agent async chat](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-agents-chat-async)                | It allows chatting with AI agents asynchronously. |
 | [Listing available agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-templates)            | It retrieves all agent templates.               |
 | [Searching agent templates](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-templates)                 | It searches for agent templates.                  |
-| [Creating agent instance based on a template](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-clone-template) | It creates a new agent based on the template    |
+| [Creating agent instance based on a template](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-clone-template) | It creates a new agent based on the selected template.    |
 | [Listing agents](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-list-agents)                                  | It retrieves all agents                         |
 | [Searching agents](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#post-ai-search-agents)                             | It searches for agents                          |
 | [Retrieving agent by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-retrieve-agent)                       | It retrieves an agent                           |
