--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -61,7 +61,7 @@ We added a new API for managing and communicating with AI agents.
 | [Retrieving tool by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-retrieve-tool)                            | It retrieves a tool                             |
 | [Upserting tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#put-ai-upsert-tool)                                     | It upserts a tool                               |
 | [Partially updating tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#patch-ai-update-tool)                          | It partially updates a tool                     |
-| [Deleting tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#delete-ai-delete-tool)                                   | It deletes a tool                               |
+| [Deleting tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#delete-ai-delete-tool)                                   | It deletes an AI tool.                               |
 
 ## Known problems
 
