--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -58,7 +58,7 @@ We added a new API for managing and communicating with AI agents.
 | [Deleting token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#delete-ai-delete-token)                                | It deletes a token                              |
 | [Listing tools](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-list-tools)                                       | It retrieves all tools                          |
 | [Searching tools](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#post-ai-search-tools)                                  | It searches for tools                           |
-| [Retrieving tool by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-retrieve-tool)                            | It retrieves a tool                             |
+| [Retrieving tool by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-retrieve-tool)                            | It retrieves an AI tool.                             |
 | [Upserting tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#put-ai-upsert-tool)                                     | It upserts a tool                               |
 | [Partially updating tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#patch-ai-update-tool)                          | It partially updates a tool                     |
 | [Deleting tool](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#delete-ai-delete-tool)                                   | It deletes an AI tool.                               |
