--- a/changelog/2025/2025-10-27-webhook.md
+++ b/changelog/2025/2025-10-27-webhook.md
@@ -17,7 +17,7 @@ layout:
 
 ## Overview
 
-The new events were added to webhook-service. The events related to finished agentic jobs.
+The new events were added to the Webhook Service. The events are related to the finished agentic jobs.
 
 ## Added events
 
