--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -38,7 +38,7 @@ We added a new API for managing and communicating with AI agents.
 | [Retrieving agent by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#get-ai-retrieve-agent)                       | It retrieves details of an agent by its ID.                           |
 | [Upserting agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#put-ai-upsert-agent)                                | It creates or updates an agent.                             |
 | [Partially updating agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#patch-ai-update-agent)                     | It partially updates an agent.                   |
-| [Deleting agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#delete-ai-delete-agent)                              | It deletes an agent                             |
+| [Deleting agent](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/agentic#delete-ai-delete-agent)                              | It deletes an agent.                             |
 | [Listing available jobs](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#get-ai-list-jobs)                                | It retrieves all agent jobs                     |
 | [Searching jobs](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#post-ai-search-jobs)                                     | It searches for agent jobs                      |
 | [Retrieving available job](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#get-ai-retrieve-job)                           | It retrieves an agent job                       |
