--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -45,7 +45,7 @@ We added a new API for managing and communicating with AI agents.
 | [Deleting a job](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/job#delete-ai-delete-job)                                    | It deletes an agent job.                         |
 | [Listing commerce events](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/commerce-events#GET-ai-list-commerce-events)        | It retrieves a list of commerce events.                         |
 | [Listing MCP servers](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-list-mcp-servers)                     | It retrieves all MCP servers.                    |
-| [Searching MCP servers](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#post-ai-search-mcp-servers)                | It searches for MCP servers                     |
+| [Searching MCP servers](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#post-ai-search-mcp-servers)                | It searches for MCP servers.                     |
 | [Retrieving MCP server by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-retrieve-mcp-server)          | It retrieves a MCP server                       |
 | [Upserting MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#put-ai-upsert-mcp-server)                   | It upserts a MCP server                         |
 | [Partially updating MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#patch-ai-update-mcp-server)        | It partially updates a MCP server               |
