--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -47,7 +47,7 @@ We added a new API for managing and communicating with AI agents.
 | [Listing MCP servers](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-list-mcp-servers)                     | It retrieves all MCP servers.                    |
 | [Searching MCP servers](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#post-ai-search-mcp-servers)                | It searches for MCP servers.                     |
 | [Retrieving MCP server by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#get-ai-retrieve-mcp-server)          | It retrieves an MCP server.                      |
-| [Upserting MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#put-ai-upsert-mcp-server)                   | It upserts a MCP server                         |
+| [Upserting MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#put-ai-upsert-mcp-server)                   | It upserts an MCP server.                         |
 | [Partially updating MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#patch-ai-update-mcp-server)        | It partially updates a MCP server               |
 | [Deleting MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#delete-ai-delete-mcp-server)                 | It deletes a MCP server                         |
 | [Listing tokens](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#get-ai-list-tokens)                                    | It retrieves all tokens                         |
