--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -51,7 +51,7 @@ We added a new API for managing and communicating with AI agents.
 | [Partially updating MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#patch-ai-update-mcp-server)        | It partially updates an MCP server.               |
 | [Deleting MCP server](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/mcp-server#delete-ai-delete-mcp-server)                 | It deletes an MCP server.                         |
 | [Listing tokens](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#get-ai-list-tokens)                                    | It retrieves all AI tokens.                         |
-| [Searching tokens](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#post-ai-search-tokens)                               | It searches for tokens                          |
+| [Searching tokens](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#post-ai-search-tokens)                               | It searches for AI tokens.                          |
 | [Retrieving token by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#get-ai-retrieve-token)                         | It retrieves a token                            |
 | [Upserting token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#put-ai-upsert-token)                                  | It upserts a token                              |
 | [Partially updating token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#patch-ai-update-token)                       | It partially updates a token                    |
