--- a/changelog/2025/2025-10-27-ai.md
+++ b/changelog/2025/2025-10-27-ai.md
@@ -55,7 +55,7 @@ We added a new API for managing and communicating with AI agents.
 | [Retrieving token by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#get-ai-retrieve-token)                         | It retrieves a token by its ID.                            |
 | [Upserting token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#put-ai-upsert-token)                                  | It creates or updates an AI token.                              |
 | [Partially updating token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#patch-ai-update-token)                       | It partially updates an AI token.                    |
-| [Deleting token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#delete-ai-delete-token)                                | It deletes a token                              |
+| [Deleting token](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/token#delete-ai-delete-token)                                | It deletes an AI token.                              |
 | [Listing tools](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-list-tools)                                       | It retrieves all tools                          |
 | [Searching tools](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#post-ai-search-tools)                                  | It searches for tools                           |
 | [Retrieving tool by ID](https://developer.emporix.io/api-references/api-guides-and-references/artificial-intelligence/ai-service/api-reference/tool#get-ai-retrieve-tool)                            | It retrieves an AI tool.                             |
