descriptions adjustments in quotes - external prices and product

--- a/changelog/2025/2025-10-21-quote.md
+++ b/changelog/2025/2025-10-21-quote.md
@@ -41,8 +41,8 @@ Key changes:
 
 ### External prices
 Prices can now be defined as `INTERNAL` - from Emporix Price Service, or `EXTERNAL` - as custom prices. The `type` field on price objects indicates the price type:
-- `INTERNAL`: Price is fetched from the Emporix Price Service using `priceId`, which is a required value
-- `EXTERNAL`: Custom price is provided directly in the request, where `priceId` is not required
+- `INTERNAL`: Price is fetched from the Emporix Price Service using `priceId`, which is a required value.
+- `EXTERNAL`: Custom price is provided directly in the request, where `priceId` is not required.
 
 ### External products
 Products can now be defined as `INTERNAL` - from Emporix Price Service, or `EXTERNAL` - as custom products. For external products:
